# CG_Project

./: .gitignore  CMakeLists.txt  EMST2D.cpp  EMST2D.qrc  EMST2D.ui  Intersection.cpp  Polygon.cpp  Polygon.ui  commands.cmd  runAndBlend.sh  test.py  test1.cpp  visualize.blend1
EMST3D/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  Scene.cpp  Scene.h  T3_demo.cpp  T3_demo.qrc  Viewer.cpp  Viewer.h  typedefs.h
Report/: CG_Project.aux  CG_Project.bbl  CG_Project.blg  CG_Project.out  CG_Project.tex  proof.sty  references.bib
input_2Dcurve/: 4Arm_new_BS.txt  Alex_Curve.txt  Jerry_Curve_ip.txt  Rafael_Curve.txt  bean_BS.txt  bolt.txt  gear7_BS.txt  octo_curve.txt  pigget_curve.txt  seahorse_curve.txt  shifu_curve.txt  sid_curve.txt  teapot_BS2.txt  torto_curve.txt
input_2Dshape/: 4Arm_new_DP.txt  Alex_shape.txt  Jerry_Shape_ip.txt  Rafael_Shape.txt  bean_DP.txt  bolt_full.txt  dragon_shape.txt  gear7_DP.txt  octofull.txt  pigget_shape.txt  shifu_shape.txt  sid_shape.txt  teapot_DP.txt  torto_shape.txt
input_3D/: 195_bunny.off  41_shark.off  41_shark.xyz  aim_shape_1021_sheep_sparse.xyz  aim_shape_195_bunny.xyz  aim_shape_270_kitten_sparse.xyz  aim_shape_348_budha_sparse.xyz  aim_shape_41_shark_dense.xyz  aim_shape_41_shark_sparse.xyz  aim_shape_83_bumpy_sphere_dense.xyz  aim_shape_83_bumpy_sphere_sparse.xyz
